syntax = "proto3";

package com.road.yishi.proto.simple;

message SimpleStarInfoMsg {
  int32 id = 1;
  int32 templateId = 2;
  int32 objectId = 3;
  int32 pos = 4;
  int32 bagType = 5;
  int32 grade = 6;
  int32 gp = 7;
}
